--- a/app/assets/stylesheets/specific/accessibility.sass
+++ b/app/assets/stylesheets/specific/accessibility.sass
@@ -66,18 +66,13 @@ body.accessibility-mode
   // Neccessary to have enough space for the border in IE
   .work-packages--page-container
     .inplace-edit .inplace-edit--read-value,
+    .inplace-edit .inplace-edit--read,
+    .inplace-edit form,
     .id a
       margin: 3px
+      max-width: calc(100% - 6px)
     .inplace-edit form
       display: block
-      max-width: calc(100% - 6px)
-      margin: 3px
-
-    .inplace-edit span
-      display: block
-      overflow: hidden
-      text-overflow: ellipsis
-
 
   // Allow a greater sensible area to click input checkboxes
   // On the WP table this is not neccessary because the whole cell is clickable
